# Avalanche_Team1_Hackathon

./: .gitignore  COMPLAI_README.md  ENVIRONMENT_SETUP.md  GIT_SETUP_COMPLETE.md  README.md  run_complai.py
backend/: .gitignore  README.md  pyproject.toml  quick_gemini_test.py  run_dev.py  simple_api_test.py  simple_gemini_test.py  simple_test.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: agent.py  agent_mvp.py  chat.py  context.py  health.py
backend/app/core/: config.py  database.py  exceptions.py  redis_client.py
backend/app/middleware/: logging.py  rate_limiting.py
backend/app/models/: __init__.py  agent.py  models_mvp.py  session.py  user.py
backend/app/schemas/: agent.py  chat.py  context.py
backend/app/services/: agent_service.py  agent_service_mvp.py  agent_service_simple.py  chat_service.py  context_service.py  gemini_client.py  mcp_manager.py  mcp_manager_mvp.py  spectra_graph.py  websocket_manager.py
backend/complai_server/: __init__.py  complai_server.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/agent/: AgentMessage.tsx  AgentToolDisplay.tsx  BackendConnectionTest.tsx  ComplianceDisplay.tsx  SpectraQAgent.tsx
frontend/src/components/layout/: Navigation.tsx
frontend/src/components/markets/: AdvancedChart.tsx  MarketCard.tsx  MarketChart.tsx  MarketStats.tsx
frontend/src/components/web3/: ConnectWallet.tsx
frontend/src/contexts/: AgentContext.tsx
frontend/src/hooks/: useAgentContext.tsx  useAgentContextHelper.ts
frontend/src/hooks/agent/: AgentContext.tsx  AgentProvider.tsx  agentTypes.ts  context.ts  index.ts  types.ts  useAgentContext.ts  useAgentContextHook.ts  useAgentQuery.ts
frontend/src/pages/: Agent.tsx  Communities.tsx  CreateMarket.tsx  Index.tsx  MarketDetail.tsx  Markets.tsx  Portfolio.tsx  TestAgent.tsx
frontend/src/providers/: AgentProvider.tsx
frontend/src/shims/: debug-shim.js  eventemitter3.js  extend-shim.js  style-to-js-shim.js  use-sync-external-store-base-shim.js  use-sync-external-store-shim.js
